feat(group): implement role revocation and enhance group management with pagination support